--- a/styles/stdStyle.css
+++ b/styles/stdStyle.css
@@ -5,7 +5,7 @@ body {
 
 h1, h2, h3, h4, h5 {
 	font-family: Poppins, Arial, sans-serif;
-	color: rgb(80, 80, 220);
+	color: #0076b6;
 
 	text-align: center;
 
@@ -43,7 +43,7 @@ div.divider {
 	display: block;
 	margin: auto;
 
-	background-image: linear-gradient(90deg, transparent, blue, transparent);
+	background-image: linear-gradient(90deg, transparent, #0076b6, transparent);
 
 	padding: 0px;
 	height: 1px;
@@ -75,7 +75,8 @@ div.sideBySide {
 
 div.sideBySide > div {
 	margin: auto;
-	margin-top: 5px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 div.equalHorzDistrib {
